main pages built with basic styling

--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- Skeleton CSS Framework Link -->
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="skeleton.css">
+    <!-- Animate: CSS Link -->
+    <link rel="stylesheet" href="animate.css">
+    <!-- CSS link -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <!-- Main page content row -->
+
+            <div class="twelve columns" id="splash-content">
+                <div class="logo-images">
+                    <a href="social.html"><img src="./images/social-logo-text.png" alt="bubbly Social" class="logo-top animated zoomIn"></a>
+                    <img src="./images/sloth-outline.png" alt="outline of hanging sloth" class="logo animated fadeIn" >
+                    <a href="distance.html"><img src="./images/distance-logo-text.png" alt="blocky Distance" class="logo-bottom animated fadeInUpBig"></a>
+                </div>
+            </div>
+
+
+        </div>
+
+
+
+    </div>
+
+
     <script src="script.js"></script>
+
 </body>
+
 </html>
