--- a/breathe.html
+++ b/breathe.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-
+    <!-- Google Font Link -->
+    <link href="https://fonts.googleapis.com/css?family=Titan+One&display=swap" rel="stylesheet">
     <!-- Skeleton CSS Framework Link -->
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="skeleton.css">
@@ -21,12 +22,17 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="twelve columns">
-                <button id="breathe">breathe</button>
-                <span id="timer"></span>
+            <div class="twelve columns dot" id="timer-page">
+
+                <h1 id="timer"></h1>
 
 
             </div>
+
+        </div>
+        <div class="row" id="timer-btn">
+            <button id="breathe">breathe</button>
+
         </div>
 
 
