able to put content on screen and search news

--- a/social.html
+++ b/social.html
@@ -17,14 +17,22 @@
 
 <body>
     <a href="index.html"><h1>back to index</h1></a>
+    <form id="movie-form">
+        <label for="search-input">Add a Movie, Yo!</label>
+        <input type="text" id="search-input"><br>
+  
+        <!-- Button triggers new movie to be added -->
+        <input id="search" type="submit" value="Add a Movie, Yo!">
+      </form>
     <div class="container">
-        <div class="row">
-            <div class="twelve columns">
-                <div class="content-box animated fadeIn">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel alias dicta labore explicabo. Assumenda suscipit sapiente, cupiditate aspernatur quod incidunt quidem sint officiis voluptatum similique pariatur a, animi iste cumque.</div>
+        <div class="row row-width">
+            <div class="twelve flex" id="user-search">
                 
-                <div class="content-box animated fadeIn">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, necessitatibus libero cum harum, similique temporibus ullam voluptates atque mollitia corrupti quia maxime beatae eligendi vero, magnam quae pariatur quis earum?</div>
-                
-                <div class="content-box animated fadeIn">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima commodi optio inventore provident, deserunt facere aperiam error, praesentium, sed eius quae officia! Quaerat laborum ea iste sunt, minima necessitatibus harum.</div>
+            </div>
+
+        </div>
+        <div class="row row-width">
+            <div class="twelve  flex" id="corona">
 
             </div>
 
@@ -34,7 +42,7 @@
 
 
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js"></script>
 
 </body>
