updated some images and breath.js

--- a/breathe.html
+++ b/breathe.html
@@ -20,20 +20,27 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container full-height" style="text-align: center;">
         <div class="row">
-            <div class="twelve columns dot" id="timer-page">
+            
+            <div class="twelve columns">
+                <div class="dot vertical-center" id="timer-page">
 
-                <h1 id="timer"></h1>
+                    <h1 class="vertical-center" id="timer"></h1>
 
+                </div>
 
+                <div class="row vertical-center" id="timer-btn">
+                    <button class="breath-button" id="breathe">breathe</button>
+                </div>
+                <div class="row vertical-center" id="exit-btn">
+                    <button class="breath-button" id="exit">exit</button>
+                </div>
             </div>
+         
 
         </div>
-        <div class="row" id="timer-btn">
-            <button id="breathe">breathe</button>
 
-        </div>
 
 
     </div>
