update to gather info

--- a/breathe.html
+++ b/breathe.html
@@ -23,18 +23,21 @@
     <div class="container full-height" style="text-align: center;">
         <div class="row">
             
-            <div class="twelve columns">
+            <div class="twelve columns full-height">
                 <div class="dot vertical-center" id="timer-page">
 
-                    <h1 class="vertical-center" id="timer"></h1>
-
                 </div>
+                <p class="vertical-center google-font" style="font-size: 300px;"></p>
 
-                <div class="row vertical-center" id="timer-btn">
-                    <button class="breath-button" id="breathe">breathe</button>
+                <div class="row vertical-center timer-btns" id="timer-btn">
+                    <button class="breath-button animated fadeIn drop-button" id="breathe">breathe</button>
+                    <a href="distance.html"><button class="breath-button animated fadeIn" id="exit">return</button></a>
                 </div>
-                <div class="row vertical-center" id="exit-btn">
-                    <button class="breath-button" id="exit">exit</button>
+                <div class="inhale">
+                    <h1 class="google-font">inhale</h1>
+                </div>
+                <div class="exhale">
+                    <h1 class="google-font">exhale</h1>
                 </div>
             </div>
          
