--- a/social.html
+++ b/social.html
@@ -16,24 +16,29 @@
 </head>
 
 <body>
-    <a href="index.html"><h1>back to index</h1></a>
-    <form id="movie-form">
-        <label for="search-input">Add a Movie, Yo!</label>
-        <input type="text" id="search-input"><br>
-  
-        <!-- Button triggers new movie to be added -->
-        <input id="search" type="submit" value="Add a Movie, Yo!">
-      </form>
-    <div class="container">
-        <div class="row row-width">
-            <div class="twelve flex" id="user-search">
-                
+    <div class="header">
+        <form id="movie-form">
+            <label class="body-text" for="search-input">What news do you want to see?</label>
+            <input type="text" id="search-input"><br>
+            
+            <!-- Button triggers new movie to be added -->
+            <input id="search" class="search-button" type="submit" value="Search">
+        </form>
+        <form action="distance.html">
+            <button type="submit" class="distance-button">Distance</button>
+        </form>
+    </div> 
+
+    <div class="container flex">
+        <div class="row row-width search-title">
+            <h1 class="body-text fade-in">COVID-19 Updates</h1>
+            <div class="row row-width">
+                <div class="twelve  flex" id="corona"></div>
             </div>
 
-        </div>
-        <div class="row row-width">
-            <div class="twelve  flex" id="corona">
-
+            <h1 class="body-text">Your Search</h1>
+            <div class="row row-width">
+                <div class="twelve flex" id="user-search"></div>
             </div>
 
         </div>
