movie interface pretty well finished. needs formatting

--- a/distance.html
+++ b/distance.html
@@ -33,10 +33,10 @@
                 </div>
                 <div class="content-box animated slideInRight">
                     <details>
-                        <summary class="content-title"><a href="movies.html"><img src="./images/movies-logo.png" alt="Movies"></a></summary>
+                        <summary class="content-title"><a href="movie.html"><img src="./images/movies-logo.png" alt="Movies"></a></summary>
                         Search through thousands of movies by title to see where they are available to stream online! Descriptions and links for every movie!
                         <br>
-                        <a href="movies.html" class="distance-button"><button>Click Here</button></a>
+                        <a href="movie.html" class="distance-button"><button>Click Here</button></a>
                       </details>
                 </div>
                 <div class="content-box animated slideInLeft">
