--- a/movie.html
+++ b/movie.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Search</title>
-    <link rel="stylesheet" href= "distance.css">
+    <link rel="stylesheet" href="distance.css">
 
-        <!-- Skeleton CSS Framework Link -->
-        <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href="skeleton.css">
-        <!-- Animate: CSS Link -->
-        <link rel="stylesheet" href="animate.css">
-        <!-- CSS link -->
-        <link rel="stylesheet" href="distance.css">
+    <!-- Skeleton CSS Framework Link -->
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="skeleton.css">
+    <!-- Animate: CSS Link -->
+    <link rel="stylesheet" href="animate.css">
+    <!-- CSS link -->
+    <link rel="stylesheet" href="distance.css">
 </head>
+
 <body>
+    <img class="logo" src="images/sloth-outline.png">
+
     <div class="header">
-        <form id="movie-form">
+        <form>
             <label class="body-text" for="search-input">Find something to watch!</label>
             <input type="text" id="search-input" placeholder="Movie name"><br>
-            
-            <!-- Button triggers new movie to be added -->
             <input id="search" class="search-button" type="submit" value="Search">
         </form>
         <form action="distance.html">
             <button type="submit" class="distance-button">Distance</button>
         </form>
-    </div> 
-    
+    </div>
+
     <!-- Movie title, rating, plot -->
     <div class="container flex">
         <div class="row row-width search-title">
-            <h1 class="body-text fade-in">COVID-19 Updates</h1>
+            <h3 class="body-text fade-in">Movie info:</h3>
             <div class="row row-width">
-                <div class="twelve  flex" id="corona"></div>
+                <div class="twelve  flex" id="IMDB"></div>
             </div>
-
-            <h1 class="body-text">Your Search</h1>
-            <div class="row row-width">
-                <div class="twelve flex" id="user-search"></div>
-            </div>
-
         </div>
+        <div class="row row-width search-title">
+            <h3 class="body-text fade-in">Things to watch:</h3>
+            <div class="row row-width">
+                <div class="twelve flex" id="stream"></div>
+            </div>
+        </div>
+
     </div>
 
     <!-- Find where you can stream it -->
@@ -50,4 +53,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="movie.js"></script>
 </body>
+
 </html>
