movie format fixed

--- a/movie.html
+++ b/movie.html
@@ -35,22 +35,22 @@
     </div> 
     
     <!-- Movie title, rating, plot -->
-    <div class="container flex">
-        <div class="row row-width search-title">
+    <div class="container">
+        <div class="row row-width">
             <span class="fade-in"><img src="./images/your-search-logo.png" alt="Your Search Result" class="movie-logo"></span>
 
             <div class="row row-width">
-                <div class="twelve  flex" id="IMDB"></div>
+                <div class="twelve flex" id="IMDB"></div>
             </div>
         </div>
-        <div class="row row-width search-title">
-            <h3 class="body-text fade-in">Things to watch:</h3>
+        <div class="row row-width">
+            <!-- <h3 class="body-text fade-in">Things to watch:</h3> -->
 
 
             <span class="fade-in"><img src="./images/scroll-right-logo.png" alt="Your Search Result" class="movie-logo"></span>
 
             <div class="row row-width">
-                <div class="twelve flex" id="stream"></div>
+                <div class="ten columns flex" id="stream"></div>
             </div>
         </div>
 
