--- a/distance.html
+++ b/distance.html
@@ -36,7 +36,7 @@
                         <summary class="content-title"><a href="movies.html"><img src="./images/movies-logo.png" alt="Movies"></a></summary>
                         Search through thousands of movies by title to see where they are available to stream online! Descriptions and links for every movie!
                         <br>
-                        <a href="movies.html" class="distance-button"><button>Click Here</button></a>
+                        <a href="movie.html" class="distance-button"><button>Click Here</button></a>
                       </details>
                 </div>
                 <div class="content-box animated slideInLeft">
@@ -44,7 +44,7 @@
                         <summary class="content-title"><a href="games.html"><img src="./images/games-logo.png" alt="Movies"></a></summary>
                         Stay up to date on the latest game releases as well as options for digital download! You may be staying in, but there's a world of games to play!
                         <br>
-                        <a href="games.html" class="distance-button"><button>Click Here</button></a>
+                        <a href="videoGame.html" class="distance-button"><button>Click Here</button></a>
                       </details>
                 </div>
             
