added index splash

--- a/index.html
+++ b/index.html
@@ -23,23 +23,40 @@
 
             <div class="twelve columns" id="splash-content">
                 <div class="logo-images">
-                    <a href="social.html"><img src="./images/social-logo-text.png" alt="bubbly Social" class="logo-top animated zoomIn"></a>
-                    <img src="./images/sloth-outline.png" alt="outline of hanging sloth" class="logo animated fadeIn" >
-                    <a href="distance.html"><img src="./images/distance-logo-text.png" alt="blocky Distance" class="logo-bottom animated fadeInUpBig"></a>
+                    <div class="content-box fade-in main-splash">
+                        <p>Are you ready to take on the tumultuous news of the world? Sounds
+                        like
+                        you're feeling pretty <a href="social.html"><img src="./images/social-logo-text.png"
+                                class="splash-img"></a></p>
+
+
+
+                        <a href="social.html"><img src="./images/social-logo-text.png" alt="bubbly Social"
+                                class="logo-top animated zoomIn"></a>
+                        <img src="./images/sloth-outline.png" alt="outline of hanging sloth"
+                            class="logo animated fadeIn">
+                        <a href="distance.html"><img src="./images/distance-logo-text.png" alt="blocky Distance"
+                                class="logo-bottom animated fadeInUpBig"></a>
+                    </div>
+                    <div class="content-box fade-in main-splash">
+
+                        <p>Are you ready to curl up and disconnect from the stress of the outside? You're ready for some <a
+                            href="distance.html"><img src="./images/distance-logo-text.png" class="splash-img"></a></p>
+
+
+                    </div>
                 </div>
+
+
             </div>
+
 
 
         </div>
 
 
-
-    </div>
-
-
-  
-<!--  <div id="player"></div> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="script.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="script.js"></script>
 </body>
+
 </html>
