--- a/videoGame.html
+++ b/videoGame.html
@@ -24,8 +24,8 @@
         <div class="row">
             <div class="twelve columns">
                 <div class="content-box animated slideInRight" id="top-games" >
-                    <ol class="game-list">Games to Checkout:
-                    </ol>
+                    <ul class="game-list">Games to Checkout:
+                    </ul>
                     
 
                     
