--- a/distance.html
+++ b/distance.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>// Distance</title>
 
     <!-- Skeleton CSS Framework Link -->
     <link rel="stylesheet" href="normalize.css">
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <img src="./images/distance-logo-large.png" alt="distance" class="animated slideInDown" id="logo-size"><br><a href="social.html"><button>Nevermind, Take me Social</button></a>
+        <img src="./images/distance-logo-large.png" alt="distance" class="animated slideInDown" id="logo-size"><br><a href="index.html"><button>Back to the start...</button></a>
     </header>
 
     <div class="container">
