--- a/social.html
+++ b/social.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Social //</title>
 
     <!-- Skeleton CSS Framework Link -->
     <link rel="stylesheet" href="normalize.css">
@@ -18,8 +18,8 @@
 <body>
     <img class="logo" src="images/sloth-outline.png">
     <div class="header">
-        <form class="distance-form" action="distance.html">
-            <button type="submit" class="distance-button">To Distance</button>
+        <form class="distance-form" action="index.html">
+            <button type="submit" class="distance-button">Back to the start...</button>
         </form>
         <form>
 
