--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Social // Distance</title>
 
     <!-- Skeleton CSS Framework Link -->
     <link rel="stylesheet" href="normalize.css">
