format updats all distance pages

--- a/movie.html
+++ b/movie.html
@@ -21,8 +21,10 @@
 <body>
 
 
-    <div class="header">
-        <img src="./images/movies-logo.png" alt="movies" style="width: 50%;">
+    <header class="header">
+        <img src="./images/movies-logo.png" alt="movies">
+        <br>
+        <img src="./images/sloth-outline.png" alt="sloth" class="logo">
         <br>
         <form id="movie-form">
             <label class="body-text" for="search-input">Find something to watch!</label>
@@ -30,9 +32,10 @@
             
             <!-- Button triggers new movie to be added -->
             <button id="search" class="search-button" type="submit" value="Search">search</button>
+ 
         </form>
 
-    </div> 
+    </header> 
     
     <!-- Movie title, rating, plot -->
     <div class="container">
