--- a/videoGame.html
+++ b/videoGame.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Distance</title>
+    <title>Video Game News</title>
 
     <!-- Skeleton CSS Framework Link -->
     <link rel="stylesheet" href="normalize.css">
@@ -13,13 +13,19 @@
     <link rel="stylesheet" href="animate.css">
     <!-- CSS link -->
     <link rel="stylesheet" href="mystyle.css">
+    <!-- jQuery cdn link -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body>
+    <header class="header">
+        <img src="./images/games-logo.png" alt="games">
+        <br>
+        <img src="./images/sloth-outline.png" alt="sloth" class="logo">
+    </header>
 
 
-
-    <a href="index.html"><h1>back to index</h1></a>
     <div class="container">
         <div class="row">
             <div class="twelve columns">
@@ -38,12 +44,16 @@
             </div>
 
         </div>
+        <div class="btn-container">
+            <form action="distance.html">
+                <button type="submit" class="distance-button">Distance Hub</button>
+            </form>
     </div>
 
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  
     <script src="mz-script.js"></script>
     <script src="script.js"></script>
 
