updated social css

--- a/social.html
+++ b/social.html
@@ -32,16 +32,17 @@
 
     <div class="container flex">
         <div class="row row-big search-title">
+            <!-- <h1 class="body-text">Your Search</h1> -->
+            <div class="row row-width">
+                <div class="twelve flex" id="user-search"></div>
+            </div>
 
-            <h1 class="body-text fade-in">COVID-19 Updates</h1>
+            <!-- <h1 class="body-text fade-in">COVID-19 Updates</h1> -->
+            <img src="./images/covid-updates-logo.png" alt="skate covid" class="logo-top animated zoomIn">
             <div class="row row-width ">
                 <div class="twelve  flex" id="corona"></div>
             </div>
 
-            <h1 class="body-text">Your Search</h1>
-            <div class="row row-width">
-                <div class="twelve flex" id="user-search"></div>
-            </div>
 
         </div>
     </div>
