updated link on distance.html

--- a/distance.html
+++ b/distance.html
@@ -18,10 +18,10 @@
 <body>
     <header>
 
-        <img src="./images/distance-logo-large.png" alt="distance" class="animated slideInDown" id="logo-size"><br><a href="social.html">
+        <img src="./images/distance-logo-large.png" alt="distance" class="animated slideInDown" id="logo-size"><br><a href="index.html">
             <img src="./images/sloth-outline.png" class="logo">
             <br>
-            <button>Nevermind, Take me Social</button></a>
+            <button>Back to the Start...</button></a>
 
 
     </header>
