--- a/breathe.html
+++ b/breathe.html
@@ -40,16 +40,15 @@
                 </div>
 
                 <!-- explanation box -->
-                <div class="content-box fade-in" style="opacity: .75;" id="breath-splash">
+                <div class="content-box fade-in" style="opacity: .75;" id="breath-splash" style="height: 40vh;">
                     <h3>Welcome to the Easy Breath Timer!</h3>
                     <p> Just press 'breathe' to start the timer. The circle will grow and shrink in 5 second increments.
-                        Try to slow your breath to match the rhythm of the dot:</p>
-
+                        Try to slow your breath to match the rhythm of the dot:
                     <span style="color: lightblue;">
                         <strong>Inhale as it grows
                     </span> | <span style="color: lightpink;">
                         Exhale as it shrinks.</strong>
-                    </span>
+                    </span></p>
                 </div>
 
                 <!-- scrolling text? -->
