update file structure, fix broken apis, fix breath animation

--- a/breathe.html
+++ b/breathe.html
@@ -9,12 +9,12 @@
     <!-- Google Font Link -->
     <link href="https://fonts.googleapis.com/css?family=Titan+One&display=swap" rel="stylesheet">
     <!-- Skeleton CSS Framework Link -->
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="skeleton.css">
+    <link rel="stylesheet" href="./public/assets/css/normalize.css">
+    <link rel="stylesheet" href="./public/assets/css/skeleton.css">
     <!-- Animate: CSS Link -->
-    <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="./public/assets/css/animate.css">
     <!-- CSS link -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./public/assets/css/style.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </head>
@@ -52,11 +52,11 @@
                 </div>
 
                 <!-- scrolling text? -->
-                <div class="inhale">
-                    <h1 class="google-font">inhale</h1>
+                <div class="breath-text">
+                    <h1 class="inhale google-font scroll-up"></h1>
                 </div>
-                <div class="exhale">
-                    <h1 class="google-font">exhale</h1>
+                <div class="breath-text">
+                    <h1 class="exhale google-font scroll-down"></h1>
                 </div>
             </div>
 
@@ -72,7 +72,7 @@
 
 
 
-    <script src="breathe.js"></script>
+    <script src="./public/assets/js/breathe.js"></script>
 </body>
 
 </html>
