--- a/distance.html
+++ b/distance.html
@@ -7,19 +7,19 @@
     <title>// Distance</title>
 
     <!-- Skeleton CSS Framework Link -->
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="skeleton.css">
+    <link rel="stylesheet" href="./public/assets/css/normalize.css">
+    <link rel="stylesheet" href="./public/assets/css/skeleton.css">
     <!-- Animate: CSS Link -->
-    <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="./public/assets/css/animate.css">
     <!-- CSS link -->
-    <link rel="stylesheet" href="distance.css">
+    <link rel="stylesheet" href="./public/assets/css/distance.css">
 </head>
 
 <body>
     <header>
 
-        <img src="./images/distance-logo-large.png" alt="distance" class="animated slideInDown" id="logo-size"><br><a href="index.html">
-            <img src="./images/sloth-outline.png" class="logo">
+        <img src="./public/assets/images/distance-logo-large.png" alt="distance" class="animated slideInDown" id="logo-size"><br><a href="index.html">
+            <img src="./public/assets/images/sloth-outline.png" class="logo">
             <br>
             <button>Back to the Start...</button></a>
 
@@ -32,7 +32,7 @@
 
                 <div class="content-box animated slideInLeft">
                     <details>
-                        <summary class="content-title"><a href="breathe.html"><img src="./images/timer-logo.png" alt="Breathe" class="content-img"></a></summary>
+                        <summary class="content-title"><a href="breathe.html"><img src="./public/assets/images/timer-logo.png" alt="Breathe" class="content-img"></a></summary>
                         Slowing your breath can have many positive effects on health and stress levels. Breathe with the expanding circle to center and help yourself relax.
                         <br>
                         <a href="breathe.html" class="distance-button"><button>Click Here</button></a>
@@ -40,7 +40,7 @@
                 </div>
                 <div class="content-box animated slideInRight">
                     <details>
-                        <summary class="content-title"><a href="movie.html"><img src="./images/movies-logo.png" alt="Movies" class="content-img"></a></summary>
+                        <summary class="content-title"><a href="movie.html"><img src="./public/assets/images/movies-logo.png" alt="Movies" class="content-img"></a></summary>
                         Search through thousands of movies by title to see where they are available to stream online! Descriptions and links for every movie!
                         <br>
                         <a href="movie.html" class="distance-button"><button>Click Here</button></a>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="content-box animated slideInLeft">
                     <details>
-                        <summary class="content-title"><a href="games.html"><img src="./images/games-logo.png" alt="Games" class="content-img"></a></summary>
+                        <summary class="content-title"><a href="videoGame.html"><img src="./public/assets/images/games-logo.png" alt="Games" class="content-img"></a></summary>
                         Stay up to date on the latest game releases as well as options for digital download! You may be staying in, but there's a world of games to play!
                         <br>
                         <a href="videoGame.html" class="distance-button"><button>Click Here</button></a>
@@ -67,8 +67,8 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="mz-script.js"></script>
-    <script src="script.js"></script>
+    <script src="./public/assets/js/mz-script.js"></script>
+    <script src="./public/assets/js/script.js"></script>
 
 </body>
 
