--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Social // Distance</title>
 
     <!-- Skeleton CSS Framework Link -->
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="skeleton.css">
+    <link rel="stylesheet" href="./public/assets/css/normalize.css">
+    <link rel="stylesheet" href="./public/assets/css/skeleton.css">
     <!-- Animate: CSS Link -->
-    <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="./public/assets/css/animate.css">
     <!-- CSS link -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./public/assets/css/style.css">
 </head>
 
 <body>
@@ -26,22 +26,22 @@
                     <div class="content-box fade-in main-splash">
                         <p>Are you ready to take on the tumultuous news of the world? Sounds
                         like
-                        you're feeling pretty <a href="social.html"><img src="./images/social-logo-text.png"
+                        you're feeling pretty <a href="social.html"><img src="./public/assets/images/social-logo-text.png"
                                 class="splash-img"></a></p>
 
 
 
-                        <a href="social.html"><img src="./images/social-logo-text.png" alt="bubbly Social"
+                        <a href="social.html"><img src="./public/assets/images/social-logo-text.png" alt="bubbly Social"
                                 class="logo-top animated zoomIn"></a>
-                        <img src="./images/sloth-outline.png" alt="outline of hanging sloth"
+                        <img src="./public/assets/images/sloth-outline.png" alt="outline of hanging sloth"
                             class="logo animated fadeIn">
-                        <a href="distance.html"><img src="./images/distance-logo-text.png" alt="blocky Distance"
+                        <a href="distance.html"><img src="./public/assets/images/distance-logo-text.png" alt="blocky Distance"
                                 class="logo-bottom animated fadeInUpBig"></a>
                     </div>
                     <div class="content-box fade-in main-splash">
 
                         <p>Are you ready to curl up and disconnect from the stress of the outside? You're ready for some <a
-                            href="distance.html"><img src="./images/distance-logo-text.png" class="splash-img"></a></p>
+                            href="distance.html"><img src="./public/assets/images/distance-logo-text.png" class="splash-img"></a></p>
 
 
                     </div>
@@ -56,7 +56,7 @@
 
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="script.js"></script>
+        <script src="./public/assets/js/script.js"></script>
 </body>
 
 </html>
