--- a/movie.html
+++ b/movie.html
@@ -9,12 +9,12 @@
    
 
         <!-- Skeleton CSS Framework Link -->
-        <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href="skeleton.css">
+        <link rel="stylesheet" href="./public/assets/css/normalize.css">
+        <link rel="stylesheet" href="./public/assets/css/skeleton.css">
         <!-- Animate: CSS Link -->
-        <link rel="stylesheet" href="animate.css">
+        <link rel="stylesheet" href="./public/assets/css/animate.css">
         <!-- CSS link -->
-        <link rel="stylesheet" href="movie.css">
+        <link rel="stylesheet" href="./public/assets/css/movie.css">
 
 </head>
 
@@ -22,9 +22,9 @@
 
 
     <header class="header">
-        <img src="./images/movies-logo.png" alt="movies">
+        <img src="./public/assets/images/movies-logo.png" alt="movies">
         <br>
-        <img src="./images/sloth-outline.png" alt="sloth" class="logo">
+        <img src="./public/assets/images/sloth-outline.png" alt="sloth" class="logo">
         <br>
         <form id="movie-form">
             <label class="body-text" for="search-input">Find something to watch!</label>
@@ -40,7 +40,7 @@
     <!-- Movie title, rating, plot -->
     <div class="container">
         <div class="row row-width">
-            <span class="fade-in"><img src="./images/your-search-logo.png" alt="Your Search Result" class="movie-logo"></span>
+            <span class="fade-in"><img src="./public/assets/images/your-search-logo.png" alt="Your Search Result" class="movie-logo"></span>
 
             <div class="row row-width">
                 <div class="twelve flex" id="IMDB"></div>
@@ -50,7 +50,7 @@
             <!-- <h3 class="body-text fade-in">Things to watch:</h3> -->
 
 
-            <span class="fade-in"><img src="./images/scroll-right-logo.png" alt="Your Search Result" class="movie-logo"></span>
+            <span class="fade-in"><img src="./public/assets/images/scroll-right-logo.png" alt="Your Search Result" class="movie-logo"></span>
 
             <div class="row row-width">
                 <div class="ten columns flex" id="stream"></div>
@@ -71,7 +71,7 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="movie.js"></script>
+    <script src="./public/assets/js/movie.js"></script>
 </body>
 
 </html>
