--- a/videoGame.html
+++ b/videoGame.html
@@ -7,12 +7,12 @@
     <title>Video Game News</title>
 
     <!-- Skeleton CSS Framework Link -->
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="skeleton.css">
+    <link rel="stylesheet" href="./public/assets/css/normalize.css">
+    <link rel="stylesheet" href="./public/assets/css/skeleton.css">
     <!-- Animate: CSS Link -->
-    <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="./public/assets/css/animate.css">
     <!-- CSS link -->
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="./public/assets/css/mystyle.css">
     <!-- jQuery cdn link -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -21,9 +21,9 @@
 <body>
 
     <header class="header">
-        <img src="./images/games-logo.png" alt="games">
+        <img src="./public/assets/images/games-logo.png" alt="games">
         <br>
-        <img src="./images/sloth-outline.png" alt="sloth" class="logo">
+        <img src="./public/assets/images/sloth-outline.png" alt="sloth" class="logo">
     </header>
 
     <div class="container">
@@ -52,8 +52,8 @@
 
 
   
-    <script src="mz-script.js"></script>
-    <script src="script.js"></script>
+    <script src="./public/assets/js/mz-script.js"></script>
+    <script src="./public/assets/js/script.js"></script>
 
 </body>
 
