--- a/social.html
+++ b/social.html
@@ -7,16 +7,16 @@
     <title>Social //</title>
 
     <!-- Skeleton CSS Framework Link -->
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="skeleton.css">
+    <link rel="stylesheet" href="./public/assets/css/normalize.css">
+    <link rel="stylesheet" href="./public/assets/css/skeleton.css">
     <!-- Animate: CSS Link -->
-    <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="./public/assets/css/animate.css">
     <!-- CSS link -->
-    <link rel="stylesheet" href="social.css">
+    <link rel="stylesheet" href="./public/assets/css/social.css">
 </head>
 
 <body>
-    <img class="logo" src="images/sloth-outline.png">
+    <img class="logo" src="./public/assets/images/sloth-outline.png">
     <div class="header">
         <form class="distance-form" action="index.html">
             <button type="submit" class="distance-button">Back to the start...</button>
@@ -32,13 +32,14 @@
 
     <div class="container flex">
         <div class="row row-big search-title">
+            <!-- <img src="./public/assets/images/social-your-search-logo.png" class="logo-top"> -->
             <!-- <h1 class="body-text">Your Search</h1> -->
             <div class="row row-width">
                 <div class="twelve flex" id="user-search"></div>
             </div>
 
             <!-- <h1 class="body-text fade-in">COVID-19 Updates</h1> -->
-            <img src="./images/covid-updates-logo.png" alt="skate covid" class="logo-top animated zoomIn">
+            <img src="./public/assets/images/covid-updates-logo.png" alt="skate covid" class="logo-top animated zoomIn">
             <div class="row row-width ">
                 <div class="twelve  flex" id="corona"></div>
             </div>
@@ -51,7 +52,7 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="script.js"></script>
+    <script src="./public/assets/js/script.js"></script>
 
 </body>
 
